welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:18: error: illegal start of statement (no modifiers allowed here)
override def run() {
^